features(group): accept & reject friend request api
